fix(fe): prevent images in news articles overflowing page

--- a/client/src/pages/News/Article/Article.module.css
+++ b/client/src/pages/News/Article/Article.module.css
@@ -21,3 +21,7 @@
 .error {
     color: rgb(255, 50, 50);
 }
+
+.wrapper img {
+    width: 100%;
+}
