--- a/client/src/pages/admin/news/ArticleEditor/ArticleEditor.module.css
+++ b/client/src/pages/admin/news/ArticleEditor/ArticleEditor.module.css
@@ -81,3 +81,7 @@
 .editorContent a {
     color: white;
 }
+
+.editorContent img {
+    width: 100%;
+}
